--- a/bexalta/css/credenciales.css
+++ b/bexalta/css/credenciales.css
@@ -153,7 +153,7 @@
 
 .cr-paragraph {
   position: absolute;
-  bottom: 80px;
+  bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
@@ -168,7 +168,7 @@
   font-family: var(--bx-font);
   font-weight: var(--bx-weight-body);
   font-size: 18px;
-  line-height: 21.7px;
+  line-height: 23px;
   color: #c7c6c6;
   margin: 0;
   max-width: var(--bx-content-width);
