--- a/bexalta/css/upgrade-adentro.css
+++ b/bexalta/css/upgrade-adentro.css
@@ -101,7 +101,7 @@
 
 .ua-paragraph {
   position: absolute;
-  bottom: 80px;
+  bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
@@ -116,7 +116,7 @@
   font-family: var(--bx-font);
   font-weight: var(--bx-weight-body);
   font-size: 18px;
-  line-height: 21px;
+  line-height: 23px;
   color: #c7c6c6;
   margin: 0;
   max-width: var(--bx-content-width);
